# transformer-peptide-classifier

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
scripts/: post-install.sh
src/: eval.py  generate_data.py  load_data.py  mamba2.py  model.py  train.py
src/utils/: utils.py
