[project]
name = "transformer-peptide-classifier"
version = "0.0.1"
description = "Demo of NN peptide classifiers"
readme = "README.md"
requires-python = ">= 3.12, < 3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Jackson Petty", email = "research@jacksonpetty.org" }
]

dependencies = [
    "fire",
    "seaborn",
    "ipykernel",
    "python-dotenv",
    "pyrootutils",
    "wandb",
    "pandas",
    "polars",
    "torch",
    "datasets",
    "accelerate",
    "tokenizers",
    "transformers",
    "torcheval",
    "einops",
]

[project.optional-dependencies]
dev = ["pre-commit"]

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]
extend-exclude = ["data/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N"]

[tool.ruff.lint.pydocstyle]
convention = "google"
